--- a/.github/workflows/deploy-to-westus02.yml
+++ b/.github/workflows/deploy-to-westus02.yml
@@ -99,6 +99,7 @@ jobs:
             git fetch
             git reset --hard origin/main
             cd cloud/gcp/westus02
+            ls -a
             echo "CORS_ORIGINS=$CORS_ORIGINS" >> westus02.env
             echo "LOG_COLLECTOR_TOKEN=$LOG_COLLECTOR_TOKEN" >> westus02.env
             echo "GCP_STORAGE_PROJECT_ID=$GCP_STORAGE_PROJECT_ID" >> westus02.env
@@ -107,6 +108,7 @@ jobs:
             echo "GCP_STORAGE_CLIENT_KEY=$GCP_STORAGE_CLIENT_KEY" >> westus02.env
             echo "MONGO_PRIMARY_ADDRESS=$MONGO_PRIMARY_ADDRESS" >> westus02.env
             echo "MQ_ADDRESS=$MQ_ADDRESS" >> westus02.env
+            cat westus02.env
             docker-compose pull
             docker-compose -f docker-compose.yml -f prod.yml up -dV
             docker image prune -f
