--- a/.github/workflows/plan-westus02.yml
+++ b/.github/workflows/plan-westus02.yml
@@ -89,6 +89,7 @@ jobs:
           path: |
             ${{env.tf_actions_working_dir}}/westus02.tfplan
             ${{env.tf_actions_working_dir}}/.terraform
+            ${{env.tf_actions_working_dir}}/.terraform.lock.hcl
           if-no-files-found: error
 
       - name: Fail when tf plan failure
