more changes to tf plan

--- a/.github/workflows/deploy-to-westus02.yml
+++ b/.github/workflows/deploy-to-westus02.yml
@@ -60,6 +60,9 @@ jobs:
           name: westus02-tf
           path: ${{ env.tf_actions_working_dir }}
 
+      - name: Terraform Init
+        run: terraform init -input=false
+
       - name: Terraform Apply
         run: terraform apply -input=false westus02.tfplan
 
