add missing param

--- a/cloud/opc/opc.env
+++ b/cloud/opc/opc.env
@@ -1,5 +1,6 @@
 NODE_ENV=prod
 LOG_LEVEL=debug
+HOTELS_WITHOUT_UPDATE_RETENTION_HOURS=168
 PUPPETEER_ENABLE_STYLES_ON_RESULTS_PAGE=false
 TOP_HOTELS_SELECT_LIMIT=10
 MQ_COLLECTING_SCENARIO_QUEUE_NAME=collecting-scenario
